carina-cli/src/snapshots/carina__module_info_snapshot_tests__snapshot_module_info.snap
---
source: carina-cli/src/module_info_snapshot_tests.rs
expression: display
---
Module: module_info

=== ARGUMENTS ===

  vpc_id: ref(awscc.ec2.vpc)  (required)
  environment: string  (required)
  instance_type: string = "t3.micro"  
  enable_monitoring: bool = true  

=== CREATES ===

  arguments { vpc_id: ref(awscc.ec2.vpc) }
    └── web_sg: awscc.ec2.security_group
       └── web_instance: awscc.ec2.instance

=== ATTRIBUTES ===

  security_group_id: ref(awscc.ec2.security_group)
    <- from: web_sg
  instance_id: ref(awscc.ec2.instance)
    <- from: web_instance
