carina-cli/src/snapshots/carina__module_info_snapshot_tests__snapshot_module_info_no_args.snap
---
source: carina-cli/src/module_info_snapshot_tests.rs
expression: display
---
Module: no_args

=== ARGUMENTS ===

  (none)

=== CREATES ===

  my_bucket: awscc.s3.bucket

=== ATTRIBUTES ===

  bucket_arn: awscc.s3.bucket
