carina-cli/src/snapshots/carina__module_info_snapshot_tests__snapshot_module_info_root_config.snap
---
source: carina-cli/src/module_info_snapshot_tests.rs
expression: display
---
File: root_config

=== IMPORTS ===

  (none)

=== CREATES ===

  vpc: awscc.ec2.vpc
    └── subnet: awscc.ec2.subnet
